# Sistema-de-Inventario-de-Autope-as

./: README.md  app.py  pyproject.toml
SQLite/: Consultas.sql  inventario.db
